--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,5 +13,7 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        
+        <script src="{{ asset('js/app.js') }}"></script>
     </body>
 </html>
